# product-intelligence-discovery

./: .env.example  .gitignore  PROGRESS.md  README.md  pyproject.toml  requirements.txt
docs/: GA4_Discovery_Current_State.docx  Steele Intel - Product Brief and Dev Roadmap.docx  ga4_discovery_current_state.md
ga4_discovery/: __init__.py  auth.py
outputs/GA4_metadata/: item_performace.txt  item_purchases_2.txt  metadata.txt  purchase_events_2026-07-01_to_2026-07-07.txt  purchase_items_2026-07-01_to_2026-07-07.txt
outputs/discovery/: Shopify_GA4_purchase_reconciliation_2026-07-09_to_2026-07-16.xlsx  shopify_ga4_order_reconciliation_2026-07-01_to_2026-07-07.csv  ~$Shopify_GA4_purchase_reconciliation_2026-07-09_to_2026-07-16.xlsx
outputs/shopify_orders/: order_lines_2026-07-01_to_2026-07-07.csv  orders_2026-07-01_to_2026-07-07.csv
outputs/shopify_schema_fields/: Collection_fields.csv  Customer_fields.csv  InventoryItem_fields.csv  InventoryLevel_fields.csv  LineItem_fields.csv  MediaImage_fields.csv  Order_fields.csv  ProductOption_fields.csv  ProductVariant_fields.csv  Product_fields.csv  Refund_fields.csv  SelectedOption_fields.csv
pi_discovery/: config.py  queries.py  shopify_client.py
scripts/: __init__.py  discover_shopify_type_fields.py  list_ga4_event_counts.py  list_ga4_item_performance.py  list_ga4_metadata.py  list_ga4_properties.py  list_ga4_purchase_transactions.py  test_ga4_connection.py  test_shopify_connection.py
scripts/ga4/: __init__.py  list_ga4_event_counts.py  (+6 more)
shopify_discovery/: config.py  queries.py  shopify_client.py
(+4 files in other folders)
