[project]
name = "product-intelligence-discovery"
version = "0.1.0"
description = "Discovery tools for Shopify and Google Analytics product intelligence."
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "google-analytics-admin",
    "google-analytics-data",
    "google-auth",
    "google-auth-oauthlib",
    "pandas",
    "python-dotenv",
    "requests",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["pi_discovery"]
